<resources>
    <string name="app_name">Virgolini</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Virgolini</string>

    <string name="hint_user_id">User ID</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_logo">Virgolini</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">User: %s</string>
    <string name="firebase_user_management">User Management</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="anonymous_sign_in">Anonymous Sign In</string>
    <string name="account_linking">Login</string>
    <string name="already_have_account">Already have an account? Log in!</string>
    <string name="dont_have_account">Don\'t have an account? Sign up!</string>
    <string name="logout">Logout</string>
    <string name="status_logged">Logged</string>
    <string name="field_required">Field required.</string>

    <string name="sign_up">Sign up</string>
    <string name="welcome">Welcome!</string>

    <string name="poke_type">Type(s):</string>
    <string name="poke_ability">Abilities:</string>
    <string name="poke_height">Height:</string>
    <string name="poke_weight">Weight:</string>
    <string name="poke_exp">XP:</string>
    <string name="poke_capt_rate">Capture rate:</string>
    <string name="poke_happiness">Base happiness:</string>
    <string name="shiny_version">Shiny version:</string>
    <string name="pokedex_info">Pokédex Description</string>
    <string name="poke_stats">Stats</string>

    <string name="button_pokedex">Pokédex</string>
    <string name="button_team_builder">Team Builder</string>
    <string name="title_activity_main">Pokédex</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>


