<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LogInActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/desc_logo"
        android:src="@drawable/flag" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="10dp"
        android:layout_marginTop="189dp"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fieldEmail"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/fieldEmail"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/titleAnonymous"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_emailpassword"
        android:textAlignment="center" />


    <Button
        android:id="@+id/buttonLogIn"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldEmail"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="8dp"
        android:layout_marginTop="17dp"
        android:text="@string/account_linking" />

    <Button
        android:id="@+id/buttonLogOut"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonLogIn"
        android:layout_marginStart="4dp"
        android:layout_toEndOf="@+id/buttonLogIn"
        android:text="@string/logout" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldEmail"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="111dp"
        android:layout_marginTop="113dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/createAccount"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginTop="147dp"
        android:layout_marginBottom="8dp"
        android:text="@string/dont_have_account"
        android:textAlignment="center" />


</RelativeLayout>