<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/desc_logo"
        android:src="@drawable/flag" />

    <TextView
        android:id="@+id/titleAnonymous"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon"
        android:layout_marginBottom="8dp"
        android:text="@string/sign_up"
        android:textAlignment="center" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_below="@+id/fieldEmail"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="2dp"
        android:layout_marginTop="28dp"
        android:text="@string/sign_up" />

    <EditText
        android:id="@+id/fieldEmail"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/titleAnonymous"
        android:layout_marginStart="1dp"
        android:layout_marginTop="189dp"
        android:hint="@string/hint_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/fieldPassword"
        android:layout_width="@dimen/field_width_standard"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/fieldEmail"
        android:layout_toEndOf="@+id/fieldEmail"
        android:hint="@string/hint_password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />


</RelativeLayout>