<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/poke_popup"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="29dp"
                android:scaleType="fitXY"
                android:src="@drawable/pokeball" />

            <TextView
                android:id="@+id/poke_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/poke_image"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="-5dp"
                android:scaleType="fitXY" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pokedex_desc_layout"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="-50dp"
            android:minHeight="268dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pokedex_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="12dp"
                android:text="@string/pokedex_info"
                android:textColor="#016C4E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/pokedex_desc_placeholder_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="45dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/pokedex_summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="10dp"
                    android:text="Summary"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pokedex_summary_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="10dp"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/pokedex_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="10dp"
                    android:text="Description"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pokedex_description_placeholder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:layout_marginTop="10dp"
                    android:justificationMode="inter_word"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="-45dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/type_layout"
                android:layout_width="wrap_content"
                android:layout_height="38dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/type_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="22dp"
                    android:text="@string/poke_type"
                    android:textColor="#016C4E"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/exp_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/poke_exp"
                android:textColor="#016C4E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/poke_exp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="18sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/ability_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poke_ability"
            android:textColor="#016C4E"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="22dp"/>

        <LinearLayout
            android:id="@+id/ability_layout"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="22dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/height_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/height_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="15dp"
                android:text="@string/poke_height"
                android:textColor="#016C4E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/wieght_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/weight_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/poke_weight"
                    android:textColor="#016C4E"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:textSize="18sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/capt_rate_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/capt_rate_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/poke_capt_rate"
                android:textColor="#016C4E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/poke_capt_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/happiness_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/happiness_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/poke_happiness"
                android:textColor="#016C4E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/poke_happiness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shiny_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/shiny_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:layout_marginTop="20dp"
                android:text="@string/shiny_version"
                android:textColor="#016C4E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/shiny_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="5dp"
                android:scaleType="fitXY" />
        </LinearLayout>

        <TextView
            android:id="@+id/poke_stats_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:layout_marginTop="0dp"
            android:text="@string/poke_stats"
            android:textColor="#016C4E"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/stats_bar_chart"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="60dp" />
    </LinearLayout>
</ScrollView>
